fixed majority of remaining layout issues, header section WIP

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,7 +16,7 @@ object {
 }
 .container {
   display: grid;
-  grid-template: 1fr 3fr / 1fr 3fr 1fr;
+  grid-template: clamp(200px, 200px, 300px) 3fr / clamp(350px, 380px, 380px) 3fr;
   /* gap: 5px; */
   max-height: 100vh;
 }
@@ -33,7 +33,7 @@ object {
 
 .search {
   display: grid;
-  grid-template: 1fr/0.1fr 3fr;
+  grid-template: 1fr/0.1fr minmax(500px, 1fr);
   max-height: 100px;
   padding: 20px;
   align-self: center;
@@ -48,7 +48,7 @@ object {
   padding-left: 10px;
 }
 .search > input:focus {
- outline: #7952b8 3px solid;
+  outline: #7952b8 3px solid;
 }
 .search > object {
   max-width: 32px;
@@ -174,53 +174,55 @@ object {
   border: 2px solid #7952b8;
   background-color: #2d2c36;
   color: #f9f8ff;
- 
 }
 /*#endregion header */
 /*#region main */
 .main-content {
   display: grid;
-  grid-template: repeat(2, 1fr) / 3fr 1fr;
+  grid-template: 1fr / clamp(800px, 800px, 1000px) minmax(300px, 350px);
   max-height: fit-content;
   grid-area: 2/2/-1/-1;
   gap: 20px;
 }
-.main-content > div > h2 {
-  grid-area: 1/1/2/-1;
-}
+
 .user-projects-container {
   grid-area: 1/1/2/2;
   display: grid;
-  grid-template: repeat(3, 1fr) / repeat(2, 2fr);
-  max-height: 1vh;
+  grid-template: 1fr 4fr 4fr 4fr / repeat(2, clamp(400px, 400px, 750px));
 }
 .user-projects-container > h2 {
+  grid-area: 1/1/2/-1;
   margin: 20px 0 0 20px;
 }
 .user-project {
   display: grid;
-  grid-template: 1fr 1fr minmax(fit-content, 100px) / minmax(fit-content, 1fr) 1fr;
+  grid-template: 1fr 3fr minmax(50px, 75px) / minmax(200px, 350px);
   max-height: 250px;
+  max-width: fit-content;
   border-radius: 10px;
   border-left: 5px solid #7952b8;
-  margin: 20px;
+  margin: 0px 20px 20px 20px;
   padding: 10px;
   background-color: #e9ebf8;
 }
 /* grid-template-columns: minmax(100px, 1fr) 3fr; */
 .user-project > h3 {
-  grid-area: 1/1/2/3;
+  grid-area: 1/1/2/2;
   max-height: min-content;
   color: #7952b8;
   padding-bottom: 10px;
 }
 .user-project > p {
-  grid-area: 2/1/3/3;
+  grid-area: 2/1/3/2;
 }
 .user-interaction {
-  grid-area: 3/2/4/3;
+  grid-area: 3/1/4/2;
   display: grid;
-  grid-template: 1fr / repeat(3, 1fr);
+  grid-template: 1fr / repeat(3, min-content);
+  max-height: 32px;
+  justify-self: end;
+  margin-top: 10px;
+  gap: 20px;
 }
 .user-interaction > object {
   max-width: 32px;
@@ -230,7 +232,7 @@ object {
 .announcements-container {
   display: grid;
   grid-area: 1/2/3/3;
-  grid-template: 1fr 6fr /1fr;
+  grid-template: 1fr 6fr / minmax(250px, 350px);
   max-height: 500px;
   border-radius: 10px;
 }
@@ -243,9 +245,9 @@ object {
   background-color: #e9ebf8;
   border-radius: 10px;
   padding: 10px;
-  margin: 0 20px 20px 20px;
+  margin: 0px 20px 20px 20px;
   display: grid;
-  grid-template: repeat(2, 1fr, 0.1fr) 1fr /1fr;
+  grid-template: 1fr clamp(0.1fr, 0.1fr, 0.1fr) 1fr / minmax(250px, 300px);
 }
 hr {
   background-color: red;
@@ -254,24 +256,30 @@ hr {
 
 .announcement-object {
   display: grid;
-  grid-template: 1fr 4fr/1fr;
+  grid-template: clamp(225px, 250px, 1fr) minmax(1fr, 4fr) / minmax(275px, 300px);
 }
 .announcement-object > h3 {
   color: #7952b8;
 }
+
+/* .announcement-object > p {
+} */
 .trending-container {
   display: grid;
-  grid-area: 2/2/3/3;
+  grid-template: 0.1fr 1fr/ 1fr;
+  grid-area: 1/2/3/3;
   border-radius: 10px;
-  max-height: 600px;
+  max-height: 350px;
+  margin-top: 500px;
 }
 .trending-container > h2 {
-  margin: 100px 0 0 20px;
+  margin: 0 0 0 20px;
+  max-height: 50px
 }
 .trending-users {
   background-color: #e9ebf8;
   border-radius: 10px;
-  margin: 20px;
+  margin: 0 20px 20px 20px;
   padding: 10px;
 }
 .trending-user {
@@ -295,10 +303,12 @@ hr {
 }
 .trending-user > h4 {
   grid-area: 1/2/2/3;
+  align-self: flex-end;
   margin: 0;
 }
 .trending-user > p {
   grid-area: 2/2/3/3;
+  font-style: normal;
   margin: 0;
 }
 
@@ -308,7 +318,7 @@ hr {
   grid-area: 1/1/-1/2;
   background-color: #7952b8;
   display: grid;
-  grid-template: 0.5fr 1fr 4fr / 0.7fr 1.3fr;
+  grid-template: minmax(100px, 0.2fr) 1fr 4fr / 0.7fr 1.3fr;
   padding-top: 20px;
   box-shadow: 5px grey;
   color: #f9f8ff;
